--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div> <!-- End of Beneath header container-->
         <form action="example.hmtl" method="POST">
             <div class="form">
-            <hr>
-            <hr>
+            <hr class="one">
+            <hr class="two">
             <h2>Contact Information</h2>
                 <label>Full Name</label>
                 <input type="text" id="name" name="server_side" placeholder="Required">
@@ -92,7 +92,7 @@
                 <input type="text" id="zipcode" name="server_side">
             </form>
             <form>
-                <hr>
+                <hr class="two">
                 <h2>Newsletter</h2>
                 <h3>Select the newsletters you would like to receive</h3>
                 <input type="checkbox" id="xyz" name="server_side">
