--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h2 class="beneath-header-container">Sign Up for our Newsletter</h2>
         <p>Get the latest news on how your code is doing right in your inbox</p>
     </div> <!-- End of Beneath header container-->
-    <div class="container">
     <hr class="one">
     <hr class="two">
+    <!-- <div class="container"> -->
         <form action="example.html" method="POST">
-            <fieldset id="contact">
+            <fieldset class="form" id="contact">
             <legend>Contact Information</legend>
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" placeholder="Required">
                 <label for="email">Email Address</label>
-                <input type="text" id="email" name="email" placeholder="Required">
+                <input type="email" id="email" name="email" placeholder="Required">
                 <label for="number">Phone Number</label>
-                <input type="text" id="number" name="number">
+                <input type="tel" id="number" name="number">
                 <label for="address">Street Address</label>
                 <input type="text" id="address" name="address">
                 <label for="city">City</label>
@@ -90,10 +90,10 @@
                     </select>
                 </div>
                 <label for="zipcode">Zip Code</label>
-                <input type="text" id="zipcode" name="server_side">
+                <input type="text" id="zipcode" name="zipcode">
             </fieldset>
-            <hr class="one">
-            <fieldset id="newsletter">
+            <hr class="two">
+            <fieldset class="form"id="newsletter">
                 <legend>Newsletter</legend>
                 <p>Select the newsletters you would like to receive</p>
                 <input type="checkbox" id="html" name="html">
@@ -110,7 +110,7 @@
                 <p>Other topics you'd like to hear about</p>
                 <textarea type="text" id="textarea" name="textarea"></textarea>
                 <input type="submit" value="Sign Up" id="submit" name="submit">
-            </div><!-- End of Form Div -->
+
             </fieldset>
         </form>
     </div>
