--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="text" id="city" name="city">
                 <label for="state">State</label>
                 <div class="styled-select">
-                <select id="state" name="State" placeholder="Choose State">
+                <select id="state" name="State">
                         <option value="" selected id="grey">Choose State</option>
                         <option value="AL">Alabama</option>
                     	<option value="AK">Alaska</option>
@@ -93,7 +93,7 @@
                 <input type="text" id="zipcode" name="zipcode">
             </fieldset>
             <hr class="two">
-            <fieldset class="form"id="newsletter">
+            <fieldset class="form" id="newsletter">
                 <legend>Newsletter</legend>
                 <p>Select the newsletters you would like to receive</p>
                 <input type="checkbox" id="html" name="html">
@@ -104,17 +104,16 @@
                 <label for="js">Javascript News</label><br>
                 <p>Newsletter format</p>
                 <input type="radio" id="html2" name="html2">
-                <label for=""html2>HTML</label><br>
+                <label for="html2">HTML</label><br>
                 <input type="radio" id="plaintext" name="plaintext">
                 <label for="plaintext">Plain Text</label><br>
                 <p>Other topics you'd like to hear about</p>
-                <textarea type="text" id="textarea" name="textarea"></textarea>
+                <textarea id="textarea" name="textarea"></textarea>
                 <input type="submit" value="Sign Up" id="submit" name="submit">
             </fieldset>
         </form>
         <footer>
             <p>Copyright The Code Review</p>
         </footer>
-    </div>
     </body>
 </html>
