Changing Radio buttons
They were set so you could select both, I fixed it

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 <input type="checkbox" id="js" name="js">
                 <label for="js">Javascript News</label><br>
                 <p>Newsletter format</p>
-                <input type="radio" id="html2" name="html2">
+                <input type="radio" id="html2" name="newsletterformat">
                 <label for="html2">HTML</label><br>
-                <input type="radio" id="plaintext" name="plaintext">
+                <input type="radio" id="plaintext" name="newsletterformat">
                 <label for="plaintext">Plain Text</label><br>
                 <p>Other topics you'd like to hear about</p>
                 <textarea id="textarea" name="textarea"></textarea>
