Updated Label for <textarea>
Changed it from a <p> to a <label>

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <label for="html2">HTML</label><br>
                 <input type="radio" id="plaintext" name="newsletterformat">
                 <label for="plaintext">Plain Text</label><br>
-                <p>Other topics you'd like to hear about</p>
+                <label>Other topics you'd like to hear about</label>
                 <textarea id="textarea" name="textarea"></textarea>
                 <input type="submit" value="Sign Up" id="submit" name="submit">
             </fieldset>
