--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr class="one">
     <hr class="two">
     <!-- <div class="container"> -->
-        <form action="example.html" method="POST">
+        <form action="" method="POST">
             <fieldset class="form" id="contact">
             <legend>Contact Information</legend>
                 <label for="name">Full Name</label>
@@ -107,7 +107,7 @@
                 <label for="html2">HTML</label><br>
                 <input type="radio" id="plaintext" name="newsletterformat">
                 <label for="plaintext">Plain Text</label><br>
-                <label>Other topics you'd like to hear about</label>
+                <label for="textarea" class="textarea-label">Other topics you'd like to hear about</label>
                 <textarea id="textarea" name="textarea"></textarea>
                 <input type="submit" value="Sign Up" id="submit" name="submit">
             </fieldset>
