--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header><!--///Header///-->
     <div class="document-container"><!--Main Container for Body Content-->
             <label class="search-label">Search</label>
-            <input class="search-input" type="text">
+            <input id="search" type="text">
             <ul class="images"><!--Images-->
             <span>Hay Bales</span>
             <li><a href="img/thumbnails/01.jpg"><img src="img/01.jpg" alt="I love hay bales. Took this snap on a drive through the countryside past some straw fields."></img></a></li>
@@ -50,7 +50,7 @@
         <p>Copyright 2016</p>
     </footer>
     </div><!--///Main Container for Body Content///-->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="main.js"></script>
     </body>
 </html>
