--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="img/thumbnails/10.jpg"><img src="img/10.jpg" alt="Sunset at the coast! The sky turned a lovely shade of orange."></img></a></li>
             <li><a href="img/thumbnails/11.jpg"><img src="img/11.jpg" alt="I did a tour of a cave today and the view of the landscape below was breathtaking."></img></a></li>
             <li><a href="img/thumbnails/12.jpg"><img src="img/12.jpg" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."></img></a></li>
-        <!--Images </ul>///Images////-->
+            </ul>     <!--Images ///Images////-->
     <footer>
         <h2>Claire Kendall Art</h2>
         <p>Copyright 2016</p>
