This is Sufficient

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
         <title>Claire Kendall Art</title>
     </head>
     <body>
-        <header class="header">
-            <label class="search-label">Search</label>
-            <input id="search" type="text">
-        </header>
         <div class="document-container"><!--Main Container for Body Content-->
-            <ul class=" clearfix images"><!--Images-->
+        <header class="header">
+            <input id="search" type="text" placeholder="Search">
+        </header>
+            <ul class="images"><!--Images-->
             <li><a href="img/thumbnails/01.jpg"><img src="img/01.jpg" alt="Hay Bales I love hay bales. Took this snap on a drive through the countryside past some straw fields."></img></a></li>
             <li><a href="img/thumbnails/02.jpg"><img src="img/02.jpg" alt="The lake was so calm today. We had a great view of the snow on the mountains from here."></img></a></li>
             <li><a href="img/thumbnails/03.jpg"><img src="img/03.jpg" alt="I hiked to the top of the mountain and got this picture of the canyon and trees below."></img></a></li>
@@ -34,6 +33,7 @@
     </div><!--///Main Container for Body Content///-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="sticky.js"></script>
+    <script src="stickymain.js"></script>
     <script src="main.js"></script>
     </body>
 </html>
