--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html>
     <head>
         <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
@@ -13,18 +13,18 @@
             <input id="search" type="text" placeholder="Search">
         </header>
             <ul class="images"><!--Images-->
-            <li><a href="img/thumbnails/01.jpg"><img src="img/01.jpg" alt="Hay Bales I love hay bales. Took this snap on a drive through the countryside past some straw fields."></img></a></li>
-            <li><a href="img/thumbnails/02.jpg"><img src="img/02.jpg" alt="The lake was so calm today. We had a great view of the snow on the mountains from here."></img></a></li>
-            <li><a href="img/thumbnails/03.jpg"><img src="img/03.jpg" alt="I hiked to the top of the mountain and got this picture of the canyon and trees below."></img></a></li>
-            <li><a href="img/thumbnails/04.jpg"><img src="img/04.jpg" alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."</img></a></li>
-            <li><a href="img/thumbnails/05.jpg"><img src="img/05.jpg" alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."></img></a></li>
-            <li><a href="img/thumbnails/06.jpg"><img src="img/06.jpg" alt="Fall is coming, I love when the leaves on the trees start to change color."></img></a></li>
-            <li><a href="img/thumbnails/07.jpg"><img src="img/07.jpg" alt="I drove past this plantation yesterday, everything is so green!"></img></a></li>
-            <li><a href="img/thumbnails/08.jpg"><img src="img/08.jpg" alt="My summer vacation to the Oregon Coast. I love the sandy dunes!"></img></a></li>
-            <li><a href="img/thumbnails/09.jpg"><img src="img/09.jpg" alt="We enjoyed a quiet stroll down this countryside lane."></img></a></li>
-            <li><a href="img/thumbnails/10.jpg"><img src="img/10.jpg" alt="Sunset at the coast! The sky turned a lovely shade of orange."></img></a></li>
-            <li><a href="img/thumbnails/11.jpg"><img src="img/11.jpg" alt="I did a tour of a cave today and the view of the landscape below was breathtaking."></img></a></li>
-            <li><a href="img/thumbnails/12.jpg"><img src="img/12.jpg" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."></img></a></li>
+            <li><a href="img/thumbnails/01.jpg"><img src="img/01.jpg" alt="Hay Bales I love hay bales. Took this snap on a drive through the countryside past some straw fields."></a></li>
+            <li><a href="img/thumbnails/02.jpg"><img src="img/02.jpg" alt="The lake was so calm today. We had a great view of the snow on the mountains from here."></a></li>
+            <li><a href="img/thumbnails/03.jpg"><img src="img/03.jpg" alt="I hiked to the top of the mountain and got this picture of the canyon and trees below."></a></li>
+            <li><a href="img/thumbnails/04.jpg"><img src="img/04.jpg" alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."></a></li>
+            <li><a href="img/thumbnails/05.jpg"><img src="img/05.jpg" alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."></a></li>
+            <li><a href="img/thumbnails/06.jpg"><img src="img/06.jpg" alt="Fall is coming, I love when the leaves on the trees start to change color."></a></li>
+            <li><a href="img/thumbnails/07.jpg"><img src="img/07.jpg" alt="I drove past this plantation yesterday, everything is so green!"></a></li>
+            <li><a href="img/thumbnails/08.jpg"><img src="img/08.jpg" alt="My summer vacation to the Oregon Coast. I love the sandy dunes!"></a></li>
+            <li><a href="img/thumbnails/09.jpg"><img src="img/09.jpg" alt="We enjoyed a quiet stroll down this countryside lane."></a></li>
+            <li><a href="img/thumbnails/10.jpg"><img src="img/10.jpg" alt="Sunset at the coast! The sky turned a lovely shade of orange."></a></li>
+            <li><a href="img/thumbnails/11.jpg"><img src="img/11.jpg" alt="I did a tour of a cave today and the view of the landscape below was breathtaking."></a></li>
+            <li><a href="img/thumbnails/12.jpg"><img src="img/12.jpg" alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."></a></li>
             </ul>     <!--Images ///Images////-->
     <footer>
         <h2>Claire Kendall Art</h2>
